Fix: Modal category visibility in light/dark modes

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -304,10 +304,15 @@ p {
   left: 0px;
   height: 2.5rem;
   font-size: 1.6rem;
+  background-color: #00d3a9;
   align-self: flex-end;
   float: right;
   box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.25);
-
+  transition: box-shadow 0.3s ease; // Smooth transition for the hover effect
+  
+  &:hover {
+    box-shadow: 0 0 16px rgba(0, 211, 169, 0.8);// Green glow effect on hover
+  }
 }
 
 .pattern-name {
